scrollbar fixes (#19)
* set to caret dep range

* fix scrollbar display

* update browserlist db

* fix scrollbar display

* revert commit

--- a/src/pages/feed/feed.module.css
+++ b/src/pages/feed/feed.module.css
@@ -6,8 +6,9 @@
 .contentContainer {
   padding: 20px 0 0;
   display: flex;
-  gap: 60px
+  gap: 60px;
 }
+
 .cardsContainer {
   max-width: 584px;
 }
